# shawarma_llvm

./: .gitignore  CMakeLists.txt  Readme.md  xmake.lua
.xmake/linux/x86_64/: xmake.conf
.xmake/linux/x86_64/cache/: config  detect  history  package  references  toolchain
include/: asm_builder.h  ast.h  ast_dumper.h  ast_visitor.h  cast.h  common.h  error.h  global_variable.h  ir_builder.h  ir_support.h  kale_util.h  parser.h  pre_analysis.h  token.h  type_checker.h
shw_std/: CMakeLists.txt  kaleidoscope_std.c  kaleidoscope_std.h  test.c  xmake.lua
src/: CMakeLists.txt  asm_builder.cpp  ast.cpp  ast_dumper.cpp  ast_visitor.cpp  global_variable.cpp  ir_builder.cpp  ir_support.cpp  kale_util.cpp  main.cpp  parser.cpp  pre_analysis.cpp  type_checker.cpp  xmake.lua
src/test/: token_parser_test.cpp
test/origin_test_case/: test_add.k  test_for1.k  test_type.k
test/parser_test/: CMakeLists.txt
test/run_test/: CMakeLists.txt  test_add  test_fibonacci  test_type  test_while_double
